-----------
v4.2.19-git
-----------



-------
v4.2.18
-------

[jan] Remove left over from 10-years-old code (Bug #14521).


-------
v4.2.17
-------

[mjr] Fix regression in sorting contacts by a name field (Bug #14471).
[mjr] Fix regression in saving tags (Bug #14463).


-------
v4.2.16
-------

[mjr] Fix synchronizing email fields in certain cases (Bug #14301).
[jan] Continue removing user data if a source doesn't have an __owner field.
[mjr] Fix over-agressive filtering of search results when searching via the API
      (Bug #13945).


-------
v4.2.15
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.
[mjr] Fix searching via the API when specifying fields and not specifying
      source.
[mjr] Require Horde_Perms::DELETE for including an address book  as sync-able.


-------
v4.2.14
-------

[mjr] Fix persisting tags when moving or copying a contact to another address
      book (Bug #14312).
[mjr] Fix resetting state when changing sync_book prefs and device has forced
      multiplex.
[mjr] Fix synchronizing contact notes via ActiveSync when no truncation value
      is requested by the client (Bug #14307).


-------
v4.2.13
-------

[mjr] Honor alternative_name mapping (Bug #14280).
[mjr] Fix dealing with orphaned virtual address books.
[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).


-------
v4.2.12
-------

[jan] Fix building search query if some fields are set for strict search (Bug
      #12272).
[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[mjr] Fix splitting tags over ActiveSync (Bug #14218).
[mjr] Fix searching within virtual address books (Bug #14155).
[mjr] Fix import of vCard with single component via API.


-------
v4.2.11
-------

[mjr] Fix regression in removing all contacts from a single address book in the
      SQL driver (Bug #14145, Guenter Bartsch
      <guenter.bartsch@vista-rasch.com>).


-------
v4.2.10
-------

[mjr] Fix fatal test error related to Content_Tagger.

