@@ -2,6 +2,8 @@
 v4.2.19-git
 -----------
 
+[jan] Fix fatal error if group contacts from an LDAP server don't exist
+      anymore.
 
 
 -------
